refactor: migración a cliente oficial de Supabase
- Implementación del cliente oficial de Supabase - Nuevo sistema de manejo de sesiones - Mejor manejo de errores - Middleware de autenticación centralizado - Eliminación de implementación manual de autenticación - Tipos de datos para las tablas principales - Configuración mejorada de variables de entorno

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-# URL base para la API de Supabase (obligatoria)
-VITE_API_URL=https://edejazcguedqylhchwjg.supabase.co/rest/v1
+# Supabase Configuration
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+VITE_API_URL=https://your-project.supabase.co/rest/v1
 
-# Clave anónima de Supabase para autenticación
-VITE_SUPABASE_ANON_KEY=supabase-anon-key-here
+# Optional Supabase Configuration (for CLI and management)
+SUPABASE_PROJECT_REF=your-project-ref
+SUPABASE_ACCESS_TOKEN=your-access-token
+SUPABASE_DB_PASSWORD=your-db-password
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_REGION=your-region
 
 # URL base para las rutas en la aplicación (opcional)
 # BASE_URL=/
