--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview",
     "test": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "check-db": "tsx src/lib/db-structure.ts",
+    "check-policies": "tsx src/lib/db-policies.ts",
+    "setup-security": "tsx scripts/setup-security.ts",
+    "apply-migrations": "tsx scripts/apply-migrations.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.8",
@@ -26,6 +30,7 @@
     "lucide-vue-next": "^0.344.0",
     "papaparse": "^5.5.2",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.4.38",
     "vue-advanced-cropper": "^2.8.9",
     "vue-chartjs": "^5.3.2",
@@ -36,6 +41,7 @@
     "@types/jspdf": "^1.3.3",
     "@types/node": "^22.13.1",
     "@types/papaparse": "^5.3.15",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-vue": "^5.1.3",
@@ -47,6 +53,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.2",
     "vitest": "^1.3.1",
