--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@modelcontextprotocol/server-postgres": "^0.6.2",
+    "@supabase/supabase-js": "^2.49.3",
     "@tanstack/vue-query": "^5.62.16",
     "@tanstack/vue-query-devtools": "^5.62.16",
     "@vueuse/core": "^10.7.2",
@@ -37,7 +39,7 @@
     "@types/papaparse": "^5.3.15",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/test-utils": "^2.4.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
@@ -47,7 +49,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2",
+    "vite": "^5.4.15",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.1.4"
   }
